--- a/css/main.css
+++ b/css/main.css
@@ -97,14 +97,70 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   .content-wrapper {
+/* ------------- General Styles --------------- */
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+
+}
+
+a {
+     color: #e2e3ed;
+     text-decoration: none;
+}
+
+h1 {
+  font-size: 2.5em;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+}
+
+p {
+  font-size: 0.875em;
+  line-height: 1.4;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  font-style: normal;
+  line-height: 2;
+}
+
+.content-wrapper {
      width: 90%;
      margin: 50px 0;
-   }
+}
+
 
    /* -------------------- Base Header - Footer Styles -------------------- */
 
-   header,
+  header,
    footer {
      display: flex;
      justify-content: center;
