--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,22 @@ input[type=button] {
      background: #527158;
    }
 
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
    .contact-section {
      display: flex;
      justify-content: center;
@@ -728,7 +744,9 @@ input[type=button] {
         width: 95%;
     }
 
-
+  .map figure {
+    padding-bottom: 30%;
+  }
 
   /* ==========================================================================
    FAQ Page
