--- a/css/main.css
+++ b/css/main.css
@@ -313,10 +313,14 @@ input[type=button] {
    }
 
    .features article {
-     width: 63%;
+     width: 55%;
      margin: 30px 0;
    }
 
+   .features i {
+     margin-bottom: 30px;
+     font-size: 3.75em;
+   }
    .features .features-items {
      display: flex;
      justify-content: center;
